--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -3,8 +3,11 @@
       package="com.jeffboody.LaserShark"
       android:versionCode="1"
       android:versionName="1.0">
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <activity android:name="LaserShark"
+                  android:screenOrientation="landscape"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
