--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -3,10 +3,15 @@
       package="com.jeffboody.LaserShark"
       android:versionCode="1"
       android:versionName="1.0">
+    <uses-sdk android:minSdkVersion="15"/>
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <activity android:name="LaserShark"
+                  android:configChanges="orientation"
                   android:screenOrientation="landscape"
                   android:label="@string/app_name">
             <intent-filter>
