--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -22,5 +22,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="orbotix.robot.app.StartupActivity"
+                  android:launchMode="singleTop"
+                  android:theme="@android:style/Theme.Translucent"
+                  />
     </application>
 </manifest>
