--- a/project/AndroidManifest.xml
+++ b/project/AndroidManifest.xml
@@ -12,7 +12,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+    <application android:label="@string/app_name"
+                 android:icon="@drawable/logo">
         <activity android:name="LaserShark"
                   android:configChanges="orientation"
                   android:screenOrientation="landscape"
